Fixed overflow in hover

--- a/src/component/WCard.css
+++ b/src/component/WCard.css
@@ -52,6 +52,7 @@
 
     width: 100%;
 
+    margin: 5px;
     gap: 2.5px;
     
     text-align: center;
